dataset1235/2025-2/805158916/users/4104794000/executions/2651470117_1927446959.log
== SUBMISSION (2025-08-25 14:18:05)
-- CODE: 
n = float(input(insira um número:"))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:32)
-- CODE: 
n = float(input("insira um número:"))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:22)
-- CODE: 
n = float(input(insira um número:))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:))/100
                    ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:20:00)
-- CODE: 
n = float(input("insira um número:"))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:17:43)
-- CODE: 
n = float(input(insira um número:"))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:17:21)
-- CODE: 
n = float(input(insira um número:"))/100
print(round(27*n,2))
print(round(142*n,2))
print(round(37*n,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    n = float(input(insira um número:"))/100
                                     ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
